k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aegis-ingress
  namespace: aegis
  annotations:
    networking.gke.io/managed-certificates: aegis-cert
spec:
  ingressClassName: gce
  rules:
    - host: aegisgovernance.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: aegis-backend
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aegis-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aegis-frontend
                port:
                  number: 80
    - host: www.aegisgovernance.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: aegis-backend
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aegis-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aegis-frontend
                port:
                  number: 80
